tests/health/gold/sdk/tests__lsp__type_definition_test.toit.gold
tests/lsp/type_definition_test.toit:95:8: error: Invalid type
bad -> func:
       ^~~
tests/lsp/type_definition_test.toit:101:9: error: Invalid type
bad x / func:
        ^~~
tests/lsp/type_definition_test.toit:108:30: error: Invalid type
bad2 -> prefix.ImportedClass.named:
                             ^~~~~
tests/lsp/type_definition_test.toit:114:19: error: Ambiguous resolution of type: 'ImportedClass'
bad3 -> ambiguous.ImportedClass:
                  ^~~~~~~~~~~~~
tests/lsp/definition_imported.toit:5:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/definition_imported2.toit:9:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/type_definition_test.toit:120:19: error: Invalid type
bad4 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:126:19: error: Invalid type
bad5 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:132:19: error: Invalid type
bad6 -> SomeClass.non_existent:
                  ^~~~~~~~~~~~
